--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/Saludo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Good Morning"
+        android:textSize="25dp"
+        android:textColor="@color/black"
+
+        />
+    <TextView
+        android:id="@+id/Nombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/Saludo"
+        app:layout_constraintEnd_toStartOf="@id/Apellido"
+        app:layout_constraintTop_toBottomOf="@+id/Saludo"
+        android:text="Nombre"
+        android:textSize="15dp"
+        />
+    <TextView
+        android:id="@+id/Apellido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/Nombre"
+        app:layout_constraintEnd_toEndOf="@id/Saludo"
+        app:layout_constraintTop_toBottomOf="@+id/Saludo"
+        android:text="Apellido"
+        android:textSize="15dp"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
