--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:backgroundTint="@color/black"
+    >
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
+
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +26,8 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:menu="@menu/menu" />
+    app:menu="@menu/menu"
+    style="@style/bottomNavigation"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
