--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,46 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/Search"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Search"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="35sp"
+        android:layout_margin="30dp"
+
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/widget1"
+        android:layout_marginTop="25dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@id/Search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/widget2"
+        android:background="@drawable/background1"
         >
 
-        <ImageView
-            android:id="@+id/UserImage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_person_24" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="165dp"
-            android:layout_height="wrap_content"
-            android:text="Your Library"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/widget2"
+        android:layout_marginTop="25dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@id/Search"
+        app:layout_constraintStart_toEndOf="@id/widget1"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/background2"
+        >
 
-        <ImageView
-            android:id="@+id/Search"
-            android:layout_width="58dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_search" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageView
-            android:id="@+id/Add_Playlist"
-            android:layout_width="8dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_playlist_add_24" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/widget3"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/widget1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/widget4"
+        android:background="@drawable/backround3"
+        >
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/widget4"
+        android:layout_marginTop="25dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@id/widget2"
+        app:layout_constraintStart_toEndOf="@id/widget3"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/background4"
+        >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
 
