--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -28,7 +28,7 @@
             android:id="@+id/textView"
             android:layout_width="165dp"
             android:layout_height="wrap_content"
-            android:text="Your Library"
+            android:text="@string/library"
             android:textStyle="bold"
             android:textSize="20dp"
             android:textColor="@color/black"/>
