--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_grey">#9e9e9e</color>
     <color name="grey">#616161</color>
     <color name="dark_grey">#424242</color>
+    <color name="lighter_gray">#e0e0e0</color>
 </resources>
